abstracted broker process and removed tests